# fiap-tcfase1

./: .gitignore  README.md  loop.py  pyproject.toml
data/: books.csv
fastapi/: Dockerfile  compose.yml  main.py  render.yaml
scripts/: main.py  models.py  scrapping.py
