[project]
name = "fiap-tcfase1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.2",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PTH", "COM"]
