[project]
name = "fiap-tcfase1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250926",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "tdqm>=0.0.1",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
    "word2number>=1.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PTH", "COM"]
